# jisr-almaharat

./: README.md  pyproject.toml
frontend/: vite.config.js
frontend/src/: router.js
frontend/src/pages/: Home.vue
jisr_almaharat/: api.py  hooks.py  modules.txt  route.py  task.py  utils.py
jisr_almaharat/fixtures/: application.json  custom_docperm.json  job.json  organization.json  required_skills.json  role.json  training.json  traning_required.json  user1.json  workflow.json  workflow_action_master.json  workflow_state.json
jisr_almaharat/programming_module/: task.py
jisr_almaharat/programming_module/doctype/application/: application.js  application.json  application.py  test_application.py
jisr_almaharat/programming_module/doctype/category/: category.json  category.py
jisr_almaharat/programming_module/doctype/job/: job.js  job.json  job.py
jisr_almaharat/programming_module/doctype/organization/: organization.js  organization.json  organization.py
jisr_almaharat/programming_module/doctype/training/: training.js  training.json
jisr_almaharat/programming_module/doctype/traning_required/: traning_required.json  (+1 more)
jisr_almaharat/templates/: hf_base.html
jisr_almaharat/www/: choose-account-type.html  update-password.html
jisr_almaharat/www/Home/: index.html  index.py  job-applicant.html  job-applicant.py  job-applicante.html  jobDetails.html  jobDetails.py  mcategories.html  mcategories.py  more_categoris.html  more_categoris.py  more_job.html  more_job.py  more_training.html  more_training.py  training_details.html  training_details.py
(+75 files in other folders)
